e2e/tests/all/snapshots/accordion-long_rest_desktop.snap
---
source: e2e/src/suite.rs
description: accordion-long at desktop (rest)
expression: tree
---
heading "Versandkostenberechnungsgrundlagenverordnung" [level=3]
  button "Versandkostenberechnungsgrundlagenverordnung" [expanded=false]
    StaticText "Versandkostenberechnungsgrundlagenverordnung"
heading "Payment" [level=3]
  button "Payment" [expanded=false]
    StaticText "Payment"
heading "Review" [level=3]
  button "Review" [expanded=false]
    StaticText "Review"
--> aria-controls [id="long-region-0"] (not in the accessibility tree)
--> aria-controls [id="long-region-1"] (not in the accessibility tree)
--> aria-controls [id="long-region-2"] (not in the accessibility tree)
