e2e/tests/all/snapshots/action_icon_rest_mobile.snap
---
source: e2e/src/suite.rs
description: action_icon at mobile (rest)
expression: tree
---
button "Copy"
button "Pin" [pressed=false]
button "Bookmark" [pressed=false]
button "Save" [busy=1] [disabled]
button "Delete" [disabled]
link "Open"
link "Disabled link" [disabled]
button "Small"
button "Extra small"
button "Square"
paragraph
  StaticText "0"
