e2e/tests/all/snapshots/alert_rest_desktop.snap
---
source: e2e/src/suite.rs
description: alert at desktop (rest)
expression: tree
---
button "Show the notice"
  StaticText "Show the notice"
status "Card expiring" [atomic] [live=polite]
  StaticText "Card expiring"
  StaticText "Update it before the next invoice."
  button "Close"
alert "Your subscription renews on the first of next month at the annual rate" [atomic] [live=assertive]
  StaticText "Your subscription renews on the first of next month at the annual rate"
  StaticText "Cancel before then to avoid the charge."
status "info filled" [atomic] [live=polite]
  StaticText "info filled"
  StaticText "The message."
status "info tonal" [atomic] [live=polite]
  StaticText "info tonal"
  StaticText "The message."
status "info outlined" [atomic] [live=polite]
  StaticText "info outlined"
  StaticText "The message."
status "info elevated" [atomic] [live=polite]
  StaticText "info elevated"
  StaticText "The message."
status "info standard" [atomic] [live=polite]
  StaticText "info standard"
  StaticText "The message."
status "success filled" [atomic] [live=polite]
  StaticText "success filled"
  StaticText "The message."
status "success tonal" [atomic] [live=polite]
  StaticText "success tonal"
  StaticText "The message."
status "success outlined" [atomic] [live=polite]
  StaticText "success outlined"
  StaticText "The message."
status "success elevated" [atomic] [live=polite]
  StaticText "success elevated"
  StaticText "The message."
status "success standard" [atomic] [live=polite]
  StaticText "success standard"
  StaticText "The message."
alert "warning filled" [atomic] [live=assertive]
  StaticText "warning filled"
  StaticText "The message."
alert "warning tonal" [atomic] [live=assertive]
  StaticText "warning tonal"
  StaticText "The message."
alert "warning outlined" [atomic] [live=assertive]
  StaticText "warning outlined"
  StaticText "The message."
alert "warning elevated" [atomic] [live=assertive]
  StaticText "warning elevated"
  StaticText "The message."
alert "warning standard" [atomic] [live=assertive]
  StaticText "warning standard"
  StaticText "The message."
alert "error filled" [atomic] [live=assertive]
  StaticText "error filled"
  StaticText "The message."
alert "error tonal" [atomic] [live=assertive]
  StaticText "error tonal"
  StaticText "The message."
alert "error outlined" [atomic] [live=assertive]
  StaticText "error outlined"
  StaticText "The message."
alert "error elevated" [atomic] [live=assertive]
  StaticText "error elevated"
  StaticText "The message."
alert "error standard" [atomic] [live=assertive]
  StaticText "error standard"
  StaticText "The message."
