e2e/tests/all/snapshots/alert_rest_mobile.snap
---
source: e2e/src/suite.rs
description: alert at mobile (rest)
expression: tree
---
button "Show the notice"
  StaticText "Show the notice"
status "Card expiring" [atomic] [live=polite]
  StaticText "Card expiring"
  StaticText "Update it before the next invoice."
  button "Close"
alert "Your subscription renews on the first of next month at the annual rate" [atomic] [live=assertive]
  StaticText "Your subscription renews on the first of next month at the annual rate"
  StaticText "Cancel before then to avoid the charge."
button "Toggle the message inset"
  StaticText "Toggle the message inset"
status "Styled parts" [atomic] [live=polite]
  StaticText "Styled parts"
  StaticText "Parts styled."
  status "Nested" [atomic] [live=polite]
    StaticText "Nested"
    StaticText "Not reached."
status "info filled" [atomic] [live=polite]
  StaticText "info filled"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "info tonal" [atomic] [live=polite]
  StaticText "info tonal"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "info outlined" [atomic] [live=polite]
  StaticText "info outlined"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "info elevated" [atomic] [live=polite]
  StaticText "info elevated"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "info standard" [atomic] [live=polite]
  StaticText "info standard"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "success filled" [atomic] [live=polite]
  StaticText "success filled"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "success tonal" [atomic] [live=polite]
  StaticText "success tonal"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "success outlined" [atomic] [live=polite]
  StaticText "success outlined"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "success elevated" [atomic] [live=polite]
  StaticText "success elevated"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
status "success standard" [atomic] [live=polite]
  StaticText "success standard"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "warning filled" [atomic] [live=assertive]
  StaticText "warning filled"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "warning tonal" [atomic] [live=assertive]
  StaticText "warning tonal"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "warning outlined" [atomic] [live=assertive]
  StaticText "warning outlined"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "warning elevated" [atomic] [live=assertive]
  StaticText "warning elevated"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "warning standard" [atomic] [live=assertive]
  StaticText "warning standard"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "error filled" [atomic] [live=assertive]
  StaticText "error filled"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "error tonal" [atomic] [live=assertive]
  StaticText "error tonal"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "error outlined" [atomic] [live=assertive]
  StaticText "error outlined"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "error elevated" [atomic] [live=assertive]
  StaticText "error elevated"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
alert "error standard" [atomic] [live=assertive]
  StaticText "error standard"
  StaticText "The message, with"
  link "a link"
    StaticText "a link"
  StaticText "."
