e2e/tests/all/snapshots/audio_rest_desktop.snap
---
source: e2e/src/suite.rs
description: audio at desktop (rest)
expression: tree
---
group "Silence"
  group "Player controls"
    button "Play"
    slider "Seek" = 0 [valuemax=4] [valuemin=0]
    button "Mute"
    slider "Volume" = 100 [valuemax=100] [valuemin=0]
    button "Playback speed 1×" [expanded=false] [haspopup=menu]
      StaticText "1×"
  status [atomic] [live=polite]
group "Broken"
  group "Player controls"
    button "Play"
    slider "Seek" = 0 [disabled] [valuemax=1] [valuemin=0]
    button "Mute"
    slider "Volume" = 100 [valuemax=100] [valuemin=0]
    button "Playback speed 1×" [expanded=false] [haspopup=menu]
      StaticText "1×"
  alert [atomic] [live=assertive]
    StaticText "This media could not be played."
  status [atomic] [live=polite]
button "Play"
  StaticText "Play"
paragraph
  StaticText "supported=true duration=4"
tooltip "Play K"
  StaticText "Play"
  StaticText "K"
