e2e/tests/all/snapshots/audio_rest_mobile.snap
---
source: e2e/src/suite.rs
description: audio at mobile (rest)
expression: tree
---
group "Silence"
  toolbar "Player controls"
    button "Play"
    slider "Seek" = 0 [valuemax=4] [valuemin=0]
    button "Mute"
  status [atomic] [live=polite]
group "Broken"
  toolbar "Player controls"
    button "Play"
    slider "Seek" = 0 [disabled] [valuemax=1] [valuemin=0]
    button "Mute"
  alert [atomic] [live=assertive]
    StaticText "This media could not be played."
  status [atomic] [live=polite]
button "Play"
  StaticText "Play"
paragraph
  StaticText "supported=true duration=4"
tooltip "Play K"
  StaticText "Play"
  StaticText "K"
